# GAMBA

./: .gitignore  install.sh  pyproject.toml
agents/: example_coder.yaml  example_researcher.yaml
gamba/: __init__.py  __main__.py  cli.py  commands.py  config.py  orientation.py
gamba/core/: agent.py  context.py  detect.py  message_bus.py  orchestrator.py  sandbox.py
gamba/interfaces/: base.py  discord_bot.py  telegram_bot.py
gamba/interfaces/tui/: app.py  styles.tcss
gamba/interfaces/web/: server.py
gamba/providers/: base.py  huggingface.py  ollama.py  openrouter.py
gamba/state/: schemas.py  store.py
gamba/tools/: base.py  code_exec.py  delegate.py  file_io.py  http_request.py  shell.py  video_search.py  web_search.py
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx
web-ui/src/components/: ActivityLog.tsx  AgentPanel.tsx  ChatInput.tsx
web-ui/src/hooks/: useWebSocket.ts
web-ui/src/stores/: agentStore.ts
web-ui/src/types/: index.ts
